Updated workload policies
- Locked: demo:deployment/podinfo
- Updated policies: demo:deployment/podinfo

--- a/workloads/podinfo-dep.yaml
+++ b/workloads/podinfo-dep.yaml
@@ -9,6 +9,8 @@ metadata:
   annotations:
     fluxcd.io/tag.init: regex:^3.10.*
     fluxcd.io/tag.podinfod: semver:~3.1
+    fluxcd.io/locked: 'true'
+    fluxcd.io/locked_user: Soheil Eizadi <seizadi@infoblox.com>
 spec:
   strategy:
     rollingUpdate:
