--- a/workloads/podinfo-dep.yaml
+++ b/workloads/podinfo-dep.yaml
@@ -9,7 +9,7 @@ metadata:
   annotations:
     fluxcd.io/tag.init: regex:^3.10.*
     fluxcd.io/tag.podinfod: semver:~3.1
-    fluxcd.io/tag.podinfo: glob:master-*
+    fluxcd.io/tag.podinfo: semver:~3.3
 spec:
   strategy:
     rollingUpdate:
